syntax = "proto3";

package solidity;
// Structures for representing Solidity's native primitive types
// borrow from shmookey/solpb and remove some definitions,
// which should be compatible with pb native type (eg. stirng/uint32/uint64)
message address { bytes data = 1; }
message uint    { bytes data = 1; }
message uint8   { bytes data = 1; }
message uint16  { bytes data = 1; }
message uint128 { bytes data = 1; }
message uint256 { bytes data = 1; }
message int     { bytes data = 1; }
message int8    { bytes data = 1; }
message int16   { bytes data = 1; }
message int128  { bytes data = 1; }
message int256  { bytes data = 1; }

// fixed bytes (really needed?)
message bytes1  { bytes data = 1; }
message bytes2  { bytes data = 1; }
message bytes3  { bytes data = 1; }
message bytes4  { bytes data = 1; }
message bytes5  { bytes data = 1; }
message bytes6  { bytes data = 1; }
message bytes7  { bytes data = 1; }
message bytes8  { bytes data = 1; }
message bytes9  { bytes data = 1; }
message bytes10 { bytes data = 1; }
message bytes11 { bytes data = 1; }
message bytes12 { bytes data = 1; }
message bytes13 { bytes data = 1; }
message bytes14 { bytes data = 1; }
message bytes15 { bytes data = 1; }
message bytes16 { bytes data = 1; }
message bytes17 { bytes data = 1; }
message bytes18 { bytes data = 1; }
message bytes19 { bytes data = 1; }
message bytes20 { bytes data = 1; }
message bytes21 { bytes data = 1; }
message bytes22 { bytes data = 1; }
message bytes23 { bytes data = 1; }
message bytes24 { bytes data = 1; }
message bytes25 { bytes data = 1; }
message bytes26 { bytes data = 1; }
message bytes27 { bytes data = 1; }
message bytes28 { bytes data = 1; }
message bytes29 { bytes data = 1; }
message bytes30 { bytes data = 1; }
message bytes31 { bytes data = 1; }
message bytes32 { bytes data = 1; }